[gd_scene load_steps=58 format=2]

[ext_resource path="res://asset/puzzle/puzzle_background.png" type="Texture" id=1]
[ext_resource path="res://scene/puzzlev2/PuzzleV2.gd" type="Script" id=2]
[ext_resource path="res://scene/puzzlev2/piece/piece2.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/puzzle/puzzle6/4.png" type="Texture" id=4]
[ext_resource path="res://asset/puzzle/puzzle6/3.png" type="Texture" id=5]
[ext_resource path="res://asset/puzzle/puzzle6/5.png" type="Texture" id=6]
[ext_resource path="res://asset/puzzle/puzzle6/6.png" type="Texture" id=7]
[ext_resource path="res://scene/puzzlev2/piece/piece1.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/puzzlev2/piece/piece6.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/puzzlev2/piece/piece4.tscn" type="PackedScene" id=10]
[ext_resource path="res://scene/puzzlev2/piece/piece5.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/puzzlev2/piece/piece3.tscn" type="PackedScene" id=12]
[ext_resource path="res://asset/puzzle/puzzle6/1.png" type="Texture" id=13]
[ext_resource path="res://asset/puzzle/puzzle6/2.png" type="Texture" id=14]
[ext_resource path="res://scene/puzzlev2/area/area2.gd" type="Script" id=15]
[ext_resource path="res://scene/puzzlev2/area/area1.gd" type="Script" id=16]
[ext_resource path="res://scene/puzzlev2/area/area3.gd" type="Script" id=17]
[ext_resource path="res://scene/puzzlev2/area/area4.gd" type="Script" id=18]
[ext_resource path="res://scene/puzzlev2/area/area5.gd" type="Script" id=19]
[ext_resource path="res://scene/puzzlev2/area/area6.gd" type="Script" id=20]
[ext_resource path="res://asset/audio/UI/Tepuk tangan.wav" type="AudioStream" id=21]
[ext_resource path="res://asset/audio/UI/Kartu muncul.wav" type="AudioStream" id=22]
[ext_resource path="res://asset/button/quit.png" type="Texture" id=23]
[ext_resource path="res://asset/matching/assets/fonts/Nunito-Regular.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://asset/audio/permainan puzzle.wav" type="AudioStream" id=25]
[ext_resource path="res://asset/audio/UI/dop.wav" type="AudioStream" id=26]
[ext_resource path="res://asset/audio/UI/Menang.wav" type="AudioStream" id=27]
[ext_resource path="res://asset/audio/UI/Kalah.wav" type="AudioStream" id=28]
[ext_resource path="res://asset/matching/assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://asset/ui/ribbon.png" type="Texture" id=30]
[ext_resource path="res://asset/ui/base.png" type="Texture" id=31]
[ext_resource path="res://asset/ui/star2.png" type="Texture" id=32]
[ext_resource path="res://asset/ui/star1.png" type="Texture" id=33]
[ext_resource path="res://asset/button/repeat.png" type="Texture" id=34]
[ext_resource path="res://scene/UI/EXIT.tscn" type="PackedScene" id=35]
[ext_resource path="res://asset/button/PAUSE.png" type="Texture" id=36]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.807843, 0.6, 0.333333, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.439216, 0.745098, 0.0156863, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0.360784, 0.239216, 0.239216, 0.345098 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=4]
Panel/styles/panel = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.713726, 0.603922, 0.509804, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=6]
Panel/styles/panel = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 56, 56 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 56, 56 )

[sub_resource type="Theme" id=13]
Panel/styles/panel = null

[sub_resource type="StyleBoxFlat" id=14]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=15]
Panel/styles/panel = SubResource( 14 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 24 )

[sub_resource type="Theme" id=17]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.52549, 0.905882, 0.458824, 0.886275 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=19]
size = 60
font_data = ExtResource( 29 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.145098, 0.792157, 0.337255, 0.607843 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=21]
size = 70
outline_size = 2
outline_color = Color( 0.0313726, 0.027451, 0.027451, 1 )
font_data = ExtResource( 29 )

[node name="PuzzleV2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -280.0
margin_right = 300.0
margin_bottom = 150.0
mouse_filter = 2
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -255.0
margin_right = 275.0
margin_bottom = 115.0
mouse_filter = 2
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -190.0
margin_right = 275.0
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = 184.0
margin_right = 424.0
margin_bottom = 330.0
mouse_filter = 2
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pieces" type="Node2D" parent="."]

[node name="piece1" parent="Pieces" instance=ExtResource( 8 )]
position = Vector2( 864, 624 )

[node name="piece2" parent="Pieces" instance=ExtResource( 3 )]
position = Vector2( 992, 632 )

[node name="piece3" parent="Pieces" instance=ExtResource( 12 )]
position = Vector2( 272, 624 )

[node name="piece4" parent="Pieces" instance=ExtResource( 10 )]
position = Vector2( 424, 608 )

[node name="piece5" parent="Pieces" instance=ExtResource( 11 )]
position = Vector2( 552, 624 )

[node name="piece6" parent="Pieces" instance=ExtResource( 9 )]
position = Vector2( 728, 616 )

[node name="area" type="Node2D" parent="."]

[node name="area1" type="Area2D" parent="area"]
position = Vector2( 456, 192 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area1"]
shape = SubResource( 7 )

[node name="area2" type="Area2D" parent="area"]
position = Vector2( 640, 192 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area2"]
shape = SubResource( 8 )

[node name="area3" type="Area2D" parent="area"]
position = Vector2( 832, 192 )
script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area3"]
shape = SubResource( 9 )

[node name="area4" type="Area2D" parent="area"]
position = Vector2( 448, 384 )
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area4"]
shape = SubResource( 10 )

[node name="area5" type="Area2D" parent="area"]
position = Vector2( 648, 384 )
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area5"]
shape = SubResource( 11 )

[node name="area6" type="Area2D" parent="area"]
position = Vector2( 832, 384 )
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area/area6"]
shape = SubResource( 12 )

[node name="position" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="position"]
position = Vector2( 864, 624 )

[node name="pos2" type="Position2D" parent="position"]
position = Vector2( 992, 624 )

[node name="pos3" type="Position2D" parent="position"]
position = Vector2( 272, 624 )

[node name="pos4" type="Position2D" parent="position"]
position = Vector2( 408, 624 )

[node name="pos5" type="Position2D" parent="position"]
position = Vector2( 552, 624 )

[node name="pos6" type="Position2D" parent="position"]
position = Vector2( 728, 624 )

[node name="Tween" type="Tween" parent="."]

[node name="salah" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
volume_db = -5.0

[node name="benar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -10.0

[node name="dop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = 10.0

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -10.0

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0
autoplay = true

[node name="change" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 72.0
theme = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 350
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_right = 140.0
margin_bottom = 72.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource( 23 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 790.0
margin_bottom = 72.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
theme = SubResource( 15 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 16 )
text = "0 : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_left = 1140.0
margin_right = 1280.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource( 36 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selesai" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -257.0
margin_right = 277.0
margin_bottom = 285.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 252, 271 )
theme = SubResource( 17 )
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ribbon" type="Sprite" parent="Selesai"]
position = Vector2( 257.514, -18.728 )
texture = ExtResource( 30 )

[node name="Label3" type="Label" parent="Selesai/ribbon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -656.9
margin_top = -164.165
margin_right = -198.9
margin_bottom = -81.1647
custom_fonts/font = SubResource( 19 )
text = "Game Selesai"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Selesai"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -246.0
margin_right = 322.0
margin_bottom = -6.0
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star1" type="Sprite" parent="Selesai/TextureRect2"]
position = Vector2( 80, 160 )
texture = ExtResource( 33 )

[node name="star3" type="Sprite" parent="Selesai/TextureRect2"]
position = Vector2( 402.405, 160.802 )
texture = ExtResource( 33 )

[node name="star2" type="Sprite" parent="Selesai/TextureRect2"]
position = Vector2( 240, 114.286 )
texture = ExtResource( 32 )

[node name="Panel" type="Panel" parent="Selesai"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -56.0
margin_right = 228.0
margin_bottom = 173.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Selesai/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Selesai/Panel/VBoxContainer"]
margin_top = 29.0
margin_right = 458.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 19 )
text = "Waktu Bermain"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Selesai/Panel/VBoxContainer"]
margin_top = 116.0
margin_right = 458.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 19 )
align = 1
valign = 1

[node name="TextureButton2" type="TextureButton" parent="Selesai"]
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_left = 51.0
margin_top = 457.0
margin_right = 241.0
margin_bottom = 587.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource( 23 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="TextureButton" parent="Selesai"]
modulate = Color( 0.972549, 0.937255, 0.937255, 1 )
margin_left = 283.0
margin_top = 457.0
margin_right = 473.0
margin_bottom = 587.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource( 34 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" parent="." instance=ExtResource( 35 )]

[node name="paused" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -48.0
margin_right = 98.5
margin_bottom = 48.0
custom_fonts/font = SubResource( 21 )
text = "Pause"
[connection signal="lepas" from="Pieces/piece1" to="." method="_on_piece1_lepas"]
[connection signal="lepas" from="Pieces/piece2" to="." method="_on_piece2_lepas"]
[connection signal="lepas" from="Pieces/piece3" to="." method="_on_piece3_lepas"]
[connection signal="lepas" from="Pieces/piece4" to="." method="_on_piece4_lepas"]
[connection signal="lepas" from="Pieces/piece5" to="." method="_on_piece5_lepas"]
[connection signal="lepas" from="Pieces/piece6" to="." method="_on_piece6_lepas"]
[connection signal="body_entered" from="area/area1" to="." method="_on_area1_body_entered"]
[connection signal="body_exited" from="area/area1" to="." method="_on_area1_body_exited"]
[connection signal="body_entered" from="area/area2" to="." method="_on_area2_body_entered"]
[connection signal="body_exited" from="area/area2" to="." method="_on_area2_body_exited"]
[connection signal="body_entered" from="area/area3" to="." method="_on_area3_body_entered"]
[connection signal="body_exited" from="area/area3" to="." method="_on_area3_body_exited"]
[connection signal="body_entered" from="area/area4" to="." method="_on_area4_body_entered"]
[connection signal="body_exited" from="area/area4" to="." method="_on_area4_body_exited"]
[connection signal="body_entered" from="area/area5" to="." method="_on_area5_body_entered"]
[connection signal="body_exited" from="area/area5" to="." method="_on_area5_body_exited"]
[connection signal="body_entered" from="area/area6" to="." method="_on_area6_body_entered"]
[connection signal="body_exited" from="area/area6" to="." method="_on_area6_body_exited"]
[connection signal="finished" from="start" to="." method="_on_start_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Selesai/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Selesai/restart" to="." method="_on_restart_pressed"]
